[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Robot.png" type="Texture" id=1]
[ext_resource path="res://UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Logo.png" type="Texture" id=4]
[ext_resource path="res://sounds/MenuSong.mp3" type="AudioStream" id=5]
[ext_resource path="res://TintRect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Speaker.png" type="Texture" id=7]
[ext_resource path="res://Sprites/MusicalNote.png" type="Texture" id=8]
[ext_resource path="res://Config.gd" type="Script" id=9]
[ext_resource path="res://sounds/menubeep.wav" type="AudioStream" id=10]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_right = 256.0
margin_bottom = 242.0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_right = 256.0
margin_bottom = 175.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 256.0
margin_bottom = 120.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/CenterContainer"]
margin_right = 256.0
margin_bottom = 120.0
texture = ExtResource( 4 )

[node name="Spacer2" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 124.0
margin_right = 256.0
margin_bottom = 134.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 138.0
margin_right = 256.0
margin_bottom = 175.0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 102.0
margin_bottom = 37.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 170.0
margin_bottom = 37.0

[node name="Start" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 23.0
text = "Start
"

[node name="Settings" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 64.0
margin_bottom = 37.0
text = "Settings"

[node name="Spacer" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 179.0
margin_right = 256.0
margin_bottom = 202.0
text = "
"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 206.0
margin_right = 256.0
margin_bottom = 242.0
text = "Â© 2023 Laserpanzerwal
LDJAM 54 \"Limited Space\"
"
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="TintRect" parent="." instance=ExtResource( 6 )]

[node name="Config" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = -43.0
margin_right = 92.5
margin_bottom = 63.0
theme = ExtResource( 2 )
script = ExtResource( 9 )

[node name="audiolevel" type="HSlider" parent="Config"]
margin_left = 48.5
margin_top = 30.0
margin_right = 155.5
margin_bottom = 42.0
mouse_filter = 2
theme = ExtResource( 2 )
max_value = 1.0
step = 0.1
value = 1.0
editable = false
scrollable = false

[node name="musiclevel" type="HSlider" parent="Config"]
margin_left = 48.5
margin_top = 54.0
margin_right = 155.5
margin_bottom = 66.0
mouse_filter = 2
max_value = 1.0
step = 0.1
value = 1.0
editable = false
scrollable = false

[node name="TextureRect" type="TextureRect" parent="Config"]
margin_left = 27.5
margin_top = 53.0
margin_right = 43.5
margin_bottom = 69.0
texture = ExtResource( 8 )

[node name="TextureRect2" type="TextureRect" parent="Config"]
margin_left = 29.5
margin_top = 28.0
margin_right = 45.5
margin_bottom = 44.0
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Config"]
margin_left = 76.0
margin_top = 80.0
margin_right = 116.0
margin_bottom = 90.0
text = "Back"

[node name="marker1" type="Label" parent="Config"]
margin_left = 19.0
margin_top = 31.0
margin_right = 27.0
margin_bottom = 41.0
text = "~"

[node name="marker2" type="Label" parent="Config"]
margin_left = 19.0
margin_top = 56.0
margin_right = 27.0
margin_bottom = 66.0
text = "~"

[node name="marker3" type="Label" parent="Config"]
margin_left = 65.0
margin_top = 80.0
margin_right = 73.0
margin_bottom = 90.0
text = "~"

[node name="Audio" type="AudioStreamPlayer" parent="Config"]
stream = ExtResource( 10 )
bus = "Audio"
